# Localizable.strings2Excel

./: .gitignore  CHANGELOG-CN.md  CHANGELOG.md  JSLocalizable.py  JSLocalizable.xls  JSLocalizableBack.js  JSLocalizableBack.py  JSLocalizableBack.xls  LICENSE  Localizable.py  Localizable.strings  Localizable.xls  LocalizableBack.py  LocalizableBack.strings  LocalizableBack.xls  LocalizableToStringXml.py  README-CN.md  README.md  en.js  localizeable.py  localizeableAll.py  pyproject.toml  readme.txt  setup.cfg
android/values/: strings.xml
android/values-es/: strings.xml
android/values-fr/: strings.xml
android/values-hr/: strings.xml
android/values-ja/: strings.xml
android/values-zh-rCN/: strings.xml
examples/android/values-hr/: strings.xml
imgs/: design.sketch
ios/en.lproj/: Localizable.strings
ios/es.lproj/: Localizable.strings
ios/fr.lproj/: InfoPlist.strings  Localizable.strings
ios/hr.lproj/: Localizable.strings
ios/ja.lproj/: InfoPlist.strings  Localizable.strings
ios/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings
pylocalization/: __init__.py  localizable.py  log.py  strings_file.py
python/: Localizable.py  LocalizableBack.py  LocalizableStringsFileUtil.py  LocalizableStringsXml.py  LocalizableToStringXml.py  Log.py  Strings2Xls.py  Strings2Xml.py  StringsFileUtil.py  StringsXmlFileUtil.py  Xls2Strings.py  Xls2StringsByLang.py  Xls2Xml.py  XlsFileUtil.py  Xml2Xls.py  XmlFileUtil.py
python/iOS4Special/: StringsAll2Xls.py  XlsMatch2Strings.py
strings/: Localizable.strings
xls/: Localizable.xls
xml/: strings.xml
(+3 files in other folders)
