[metadata]
name = pylocalization
version = 2.0.0
author = CatchZeng
author_email = catchzenghh@gmail.com
description = Python command line tool for conversion between iOS strings files and excel files & between android strings.xml files and excl files. & strings files to android strings.xml files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatchZeng/Localizable.strings2Excel
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    xlrd>=2.0.1
    xlwt>=1.3.0